--- a/configs/tests/test_gpu_relax.yml
+++ b/configs/tests/test_gpu_relax.yml
@@ -24,8 +24,8 @@ slab_filters:
 adslab_prediction_steps:
   - step: predict
     type: relaxation
-    gpu: false
+    gpu: true
     batch_size: 4
-    label: 'dE_gemnet_is2re_finetuned'
+    label: 'dE_gemnet_relax'
     checkpoint_path: 'configs/ocp_config_checkpoints/gemnet_t_direct_h512_all.pt'
 
