--- a/configs/prod_configs/metals_OER.yml
+++ b/configs/prod_configs/metals_OER.yml
@@ -10,6 +10,7 @@ output_options:
   verbose: True
   pickle_path: '/home/jovyan/shared-scratch/kbroderick/TRI_screen.pkl'
   config_path: '/home/jovyan/shared-scratch/kbroderick/TRI_screen.yml'
+  parity_output_folder: 'outputs/parity-outputs/'
 
 adsorbate_filters:
   filter_by_smiles: ['*OH']
