--- a/.github/workflows/test_catlas.yml
+++ b/.github/workflows/test_catlas.yml
@@ -27,6 +27,27 @@ jobs:
         python setup.py develop
         python bin/predictions.py configs/tests/test_metals.yml configs/dask_cluster/local_cluster/local_cluster.py
 
+  test_local_scheduler_relaxation:
+    name: Test catlas with local scheduler and cpu relaxations
+
+    runs-on: [self-hosted, linux]
+
+    container:
+      image: docker://ulissigroup/kubeflow:predictions
+      volumes:
+        - /home/jovyan/shared-scratch:/home/jovyan/shared-scratch
+
+    steps:
+    - run: |
+        sudo apt update && sudo apt install git-lfs
+    - name: Run example predictions
+      uses: actions/checkout@v2
+    - run: |
+        (cd /home/jovyan/ocp && git pull) 
+        ln -s /home/jovyan/shared-scratch/catlas/ocp_checkpoints
+        python setup.py develop
+        python bin/predictions.py configs/tests/test_cpu_relax.yml configs/dask_cluster/local_cluster/local_cluster.py
+
   test_kubecluster:
     name: Test catlas with kubecluster
 
@@ -59,4 +80,70 @@ jobs:
         ln -s /home/jovyan/shared-scratch/catlas/ocp_checkpoints
         python setup.py develop
         python bin/predictions.py configs/tests/test_metals.yml configs/dask_cluster/github_kube_cluster/github_kube_cpu_cluster.py
+
+  test_kubecluster_cpu_relax:
+    name: Test catlas with kubecluster and cpu relaxations
+
+    runs-on: [self-hosted, linux, shared-scratch]
+
+    container:
+      image: docker://ulissigroup/kubeflow:predictions
+      volumes:
+        - /home/jovyan/shared-scratch:/home/jovyan/shared-scratch
+
+    steps:
+    - uses: azure/k8s-set-context@v1
+      with:
+        method: kubeconfig
+        kubeconfig: ${{ secrets.ZULISSI_KUBECONFIG }}
+        context: ulissigroup-desktops-fqdn
+      id: setcontext
+    - run: |
+        sudo apt update && sudo apt install git-lfs
+        mkdir -p /home/jovyan/shared-scratch/catlas_runners/$GITHUB_RUN_ID
+        mkdir -p /home/jovyan/shared-scratch/catlas_runners/$GITHUB_RUN_ID/catlas
+        ln -s /home/jovyan/shared-scratch/catlas_runners/$GITHUB_RUN_ID/catlas
+        (cd /home/jovyan/ocp && git pull)
+        rsync -a /home/jovyan/ocp /home/jovyan/shared-scratch/catlas_runners/$GITHUB_RUN_ID/
+    - uses: actions/checkout@v2
+      with:
+        path: catlas
+    - run: |
+        cd catlas
+        ln -s /home/jovyan/shared-scratch/catlas/ocp_checkpoints
+        python setup.py develop
+        python bin/predictions.py configs/tests/test_cpu_relax.yml configs/dask_cluster/github_kube_cluster/github_kube_cpu_cluster.py
+
+  test_kubecluster_gpu_relax:
+    name: Test catlas with kubecluster and gpu relaxations
+
+    runs-on: [self-hosted, linux, shared-scratch]
+
+    container:
+      image: docker://ulissigroup/kubeflow:predictions
+      volumes:
+        - /home/jovyan/shared-scratch:/home/jovyan/shared-scratch
+
+    steps:
+    - uses: azure/k8s-set-context@v1
+      with:
+        method: kubeconfig
+        kubeconfig: ${{ secrets.ZULISSI_KUBECONFIG }}
+        context: ulissigroup-desktops-fqdn
+      id: setcontext
+    - run: |
+        sudo apt update && sudo apt install git-lfs
+        mkdir -p /home/jovyan/shared-scratch/catlas_runners/$GITHUB_RUN_ID
+        mkdir -p /home/jovyan/shared-scratch/catlas_runners/$GITHUB_RUN_ID/catlas
+        ln -s /home/jovyan/shared-scratch/catlas_runners/$GITHUB_RUN_ID/catlas
+        (cd /home/jovyan/ocp && git pull)
+        rsync -a /home/jovyan/ocp /home/jovyan/shared-scratch/catlas_runners/$GITHUB_RUN_ID/
+    - uses: actions/checkout@v2
+      with:
+        path: catlas
+    - run: |
+        cd catlas
+        ln -s /home/jovyan/shared-scratch/catlas/ocp_checkpoints
+        python setup.py develop
+        python bin/predictions.py configs/tests/test_gpu_relax.yml configs/dask_cluster/github_kube_cluster/github_kube_gpu_cluster.py
 
