--- a/configs/tests/test_cpu_relax.yml
+++ b/configs/tests/test_cpu_relax.yml
@@ -1,7 +1,7 @@
 dask:
   partitions: -1 # if -1, 1 row per surface otherwise number of partitions
 
-memory_cache_location: '/home/jovyan/shared-scratch/catlas/test_cache_cpu_relax'
+memory_cache_location: '/home/jovyan/test_cache'
 
 output_options:
   pickle_path: '/home/jovyan/shared-scratch/catlas/test_cache_cpu_relax/test_kube_cluster_output.pkl'
