--- a/configs/tests/test_cpu_relax.yml
+++ b/configs/tests/test_cpu_relax.yml
@@ -12,7 +12,7 @@ input_options:
   bulk_file: 'catlas/bulk_structures/ocdata_bulks.db'
 
 bulk_filters:
-    filter_by_mpids: ['mp-126', 'mp-81']
+    filter_by_mpids: ['mp-81']
 
 adsorbate_filters:
     filter_by_smiles: ['*H']
