--- a/.github/workflows/test_catlas.yml
+++ b/.github/workflows/test_catlas.yml
@@ -36,13 +36,16 @@ jobs:
         - /home/jovyan/shared-scratch:/home/jovyan/shared-scratch
 
     steps:
-    - name: Run example predictions
+    - name: Checkout branch
       uses: actions/checkout@v2
-    - run: |
+    - name: Run cpu relaxations test
+      run: |
         (cd /home/jovyan/ocp && git pull) 
         ln -s /home/jovyan/shared-scratch/catlas/ocp_checkpoints
         python setup.py develop
         python bin/predictions.py configs/tests/test_cpu_relax.yml configs/dask_cluster/local_cluster/local_cluster.py
+      env:
+        OMP_NUM_THREADS: 4
 
   test_kubecluster:
     name: Test catlas with kubecluster
@@ -70,15 +73,18 @@ jobs:
     - uses: actions/checkout@v2
       with:
         path: catlas
-    - run: |
+    - name: Test direct inference with kubecluster
+      run: |
         cd catlas
         ln -s /home/jovyan/shared-scratch/catlas/ocp_checkpoints
         python setup.py develop
         python bin/predictions.py configs/tests/test_metals.yml configs/dask_cluster/github_kube_cluster/github_kube_cpu_cluster.py
-    - run: |
+    - name: Test cpu relaxation inference with kubecluster
+      run: |
         cd catlas
         python bin/predictions.py configs/tests/test_cpu_relax.yml configs/dask_cluster/github_kube_cluster/github_kube_cpu_cluster.py
-    - run: |
+    - name: Test gpu relaxation with kubecluster
+      run: |
         cd catlas
         python bin/predictions.py configs/tests/test_gpu_relax.yml configs/dask_cluster/github_kube_cluster/github_kube_gpu_cluster.py
 
