--- a/configs/tests/test_metals.yml
+++ b/configs/tests/test_metals.yml
@@ -4,9 +4,9 @@ dask:
 memory_cache_location: '/home/jovyan/test_cache'
 
 output_options:
-  pickle_path: test_kube_cluster_output.pkl
+  pickle_path: test_metals.pkl
   pickle_folder: '/home/jovyan/shared-scratch/catlas/outputs/test_metals/'
-  config_path: test_kube_cluster_output.yml
+  config_path: test_metals.yml
   parity_output_folder: 'outputs/parity-outputs/'
   verbose: false
 
