--- a/.github/workflows/test_catlas.yml
+++ b/.github/workflows/test_catlas.yml
@@ -22,8 +22,8 @@ jobs:
     - run: |
         (cd /home/jovyan/ocp && git pull) 
         ln -s /home/jovyan/shared-scratch/catlas/ocp_checkpoints
-        (cd /home/jovyan/catlas/parity && ln -s /home/jovyan/shared-scratch/catlas/npz-files)
-        (cd /home/jovyan/catlas/catlas && ln -s /home/jovyan/shared-scratch/catlas/pourbaix_diagrams)
+        ln -s /home/jovyan/shared-scratch/catlas/npz-files ./catlas/parity/
+        ln -s /home/jovyan/shared-scratch/catlas/pourbaix_diagrams ./catlas/
         python setup.py develop
         python bin/predictions.py configs/tests/test_metals.yml configs/dask_cluster/local_cluster/local_cluster.py
 
@@ -44,8 +44,8 @@ jobs:
       run: |
         (cd /home/jovyan/ocp && git pull) 
         ln -s /home/jovyan/shared-scratch/catlas/ocp_checkpoints
-        (cd /home/jovyan/catlas/parity && ln -s /home/jovyan/shared-scratch/catlas/npz-files)
-        (cd /home/jovyan/catlas/catlas && ln -s /home/jovyan/shared-scratch/catlas/pourbaix_diagrams)
+        ln -s /home/jovyan/shared-scratch/catlas/npz-files ./catlas/parity/
+        ln -s /home/jovyan/shared-scratch/catlas/pourbaix_diagrams ./catlas/
         python setup.py develop
         python bin/predictions.py configs/tests/test_cpu_relax.yml configs/dask_cluster/local_cluster/local_cluster.py
       env:
