--- a/configs/dask_cluster/perlmutter/slurm_scheduler.yml
+++ b/configs/dask_cluster/perlmutter/slurm_scheduler.yml
@@ -1,3 +1,3 @@
 from dask.distributed import Client
 
-client = Client(scheduler_file = {{ scheduler_file }} )
+client = Client(scheduler_file = '{{ scheduler_file }}' )
