--- a/configs/dask_cluster/perlmutter/test_gpu_relax.yml
+++ b/configs/dask_cluster/perlmutter/test_gpu_relax.yml
@@ -28,10 +28,10 @@ adslab_prediction_steps:
     gpu: true
     batch_size: 4
     label: 'dE_gemnet_is2re_finetuned'
-    checkpoint_path: '{{ SCRATCH }}/ocp_checkpoints/gemnet-is2re-finetuned-11-01.pt'
+    checkpoint_path: 'ocp_checkpoints/gemnet-is2re-finetuned-11-01.pt'
   - step: predict
     gpu: true
     batch_size: 4
     label: 'dE_gemnet_relax'
-    checkpoint_path: '{{ SCRATCH }}/ocp_checkpoints/gemnet_t_direct_h512_all.pt'
+    checkpoint_path: 'ocp_checkpoints/gemnet_t_direct_h512_all.pt'
 
