--- a/configs/tests/test_gpu_relax.yml
+++ b/configs/tests/test_gpu_relax.yml
@@ -4,11 +4,11 @@ dask:
 memory_cache_location: '/home/jovyan/test_cache'
 
 output_options:
-  pickle_path: test_gpu_relaxation.pkl
-  pickle_folder: '/home/jovyan/shared-scratch/catlas/outputs/test_gpu_relaxation/'
-  config_path: test_gpu_relaxations.yml
-  parity_output_folder: 'outputs/parity-outputs/'
-  verbose: false
+  run_name: "relax_gpu"
+  pickle_final_output: True
+  pickle_intermediate_outputs: True
+  make_parity_plots: True
+  verbose: False
 
 input_options:
   bulk_file: 'catlas/bulk_structures/ocdata_bulks.db'
