--- a/configs/tests/test_gpu_relax.yml
+++ b/configs/tests/test_gpu_relax.yml
@@ -35,4 +35,5 @@ adslab_prediction_steps:
     batch_size: 4
     label: 'dE_gemnet_relax'
     checkpoint_path: 'ocp_checkpoints/gemnet_t_direct_h512_all.pt'
+    number_steps: 10
 
