--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # Outputs
 outputs/
 ocp_checkpoints
+parity
 configs/dask_cluster/dev_kube_cluster/worker-gpu.yml
 configs/dask_cluster/dev_kube_cluster/worker-cpu.yml
 
