--- a/configs/tests/test_metals.yml
+++ b/configs/tests/test_metals.yml
@@ -11,11 +11,11 @@ output_options:
   verbose: False
 
 input_options:
-  bulk_file: 'catlas/bulk_structures/ocdata_bulks.db'
+  bulk_file: 'catlas/bulk_structures/ocp_bulks_w_properties.db'
   adsorbate_file: 'catlas/adsorbate_structures/adsorbates.pkl'
 
 bulk_filters:
-    filter_by_mpids: ['mp-126','mp-30', 'mp-101']
+    filter_by_bulk_ids: ['mp-126','mp-30', 'mp-101']
 
 adsorbate_filters:
     filter_by_smiles: ['*H']
