--- a/.github/workflows/test_catlas.yml
+++ b/.github/workflows/test_catlas.yml
@@ -82,7 +82,7 @@ jobs:
         python setup.py develop
     - name: Startup dask cluster
       run: |
-        kubectl apply -f test_cluster_catlas.yaml
+        kubectl apply -f configs/dask_cluster/dask_operator/catlas-hybrid-cluster.yml
         kubectl scale --replicas=8 daskworkergroup catlas-hybrid-cluster-default-worker-group
     - name: Test cpu relaxation inference with kubecluster
       run: |
