more sane default worker sizes

--- a/configs/dask_cluster/dask_operator/catlas-hybrid-cluster.yml
+++ b/configs/dask_cluster/dask_operator/catlas-hybrid-cluster.yml
@@ -9,7 +9,7 @@ spec:
         containers:
           - image: ulissigroup/kubeflow:predictions
             imagePullPolicy: Always
-            args: [dask-worker, --nthreads, '1',--nprocs,'1', --no-dashboard, --memory-limit,'10 GiB',--death-timeout, '600',--name,'$(DASK_WORKER_NAME)']
+            args: [dask-worker, --nthreads, '1',--nprocs,'1', --no-dashboard, --memory-limit,'4 GiB',--death-timeout, '600',--name,'$(DASK_WORKER_NAME)']
             name: dask-worker
             env: 
             - name: OMP_NUM_THREADS
@@ -24,11 +24,11 @@ spec:
               value: "0"
             resources:
               limits:
-                cpu: "4"
-                memory: 21G
+                cpu: "2"
+                memory: 4G
               requests:
-                cpu: "4"
-                memory: 21G
+                cpu: "2"
+                memory: 4G
             volumeMounts:
             - mountPath: /home/jovyan/ocp
               name: workspace-inference
@@ -48,6 +48,13 @@ spec:
           - name: workspace-inference
             persistentVolumeClaim:
               claimName: workspace-inference
+        affinity:
+          nodeAffinity:
+            requiredDuringSchedulingIgnoredDuringExecution:
+              nodeSelectorTerms:
+              - matchExpressions:
+                - key: "nvidia.com/gpu.product"
+                  operator:  "DoesNotExist"
   scheduler:
     spec:
       containers:
@@ -104,7 +111,7 @@ spec:
       containers:
       - image: ulissigroup/kubeflow:predictions
         imagePullPolicy: Always
-        args: [dask-worker, --nthreads, '1',--nprocs,'1', --no-dashboard, --memory-limit,'20 GiB',--death-timeout, '600',--resources,"GPU=1",--name,'$(DASK_WORKER_NAME)']
+        args: [dask-worker, --nthreads, '1',--nprocs,'1', --no-dashboard, --memory-limit,'10 GiB',--death-timeout, '600',--resources,"GPU=1",--name,'$(DASK_WORKER_NAME)']
         name: dask-worker
         env:
         - name: OMP_NUM_THREADS
@@ -117,12 +124,12 @@ spec:
           value: "your_api_key"
         resources:
           limits:
-            cpu: "4"
-            memory: 21G
+            cpu: "2"
+            memory: 10G
             nvidia.com/gpu: "1"
           requests:
-            cpu: "4"
-            memory: 21G
+            cpu: "2"
+            memory: 10G
             nvidia.com/gpu: "1"
         volumeMounts:
         - mountPath: /home/jovyan/ocp
