--- a/configs/automated_screens/intermetallics_HER.yml
+++ b/configs/automated_screens/intermetallics_HER.yml
@@ -10,7 +10,7 @@ output_options:
   verbose: False
 
 bulk_filters:
-  filter_by_acceptable_elements: ['Sc', 'Ti', 'V', 'Cr', 'Mn', 'Fe', 'Co', 'Ni', 'Cu', 'Zn', 'Y', 'Zr', 'Nb', 'Mo', 'Tc', 'Ru', 'Rh', 'Pd', 'Ag', 'Cd', 'Ta', 'W', 'Re', 'Os', 'Ir', 'Pt', 'Au', 'Hg', 'Al', 'Ga', 'Sn', 'Pb', 'Bi', 'In']
+  filter_by_element_groups: ['transition_metal']
   filter_by_object_size: 40 # 60
 
 adsorbate_filters:
