--- a/configs/automated_screens/nitrides_CO2RR.yml
+++ b/configs/automated_screens/nitrides_CO2RR.yml
@@ -6,6 +6,7 @@ input_options:
 
 output_options:
   pickle_final_output: True # True pickles the resulting predictions
+  pickle_intermediate_outputs: False
   run_name: 'nitrides_CO2RR_{{ GITHUB_RUN_ID }}'
   verbose: False
 
