--- a/configs/automated_screens/intermetallics_ORR.yml
+++ b/configs/automated_screens/intermetallics_ORR.yml
@@ -7,7 +7,7 @@ input_options:
 output_options:
   pickle_final_output: True # True pickles the resulting predictions
   pickle_intermediate_outputs: False
-  run_name: '{{ GITHUB_RUN_ID }}'
+  run_name: 'intermetallics_ORR_{{ GITHUB_RUN_ID }}'
   verbose: False
   make_parity_plots: True
 
