--- a/.github/workflows/automated_screens.yml
+++ b/.github/workflows/automated_screens.yml
@@ -52,15 +52,12 @@ jobs:
       run: |
         cd catlas
         python bin/predictions.py configs/automated_screens/nitrides_CO2RR.yml configs/dask_cluster/dask_operator/dask_connect.py & 
-        pids[0]=$!
         python bin/predictions.py configs/automated_screens/intermetallics_ORR.yml configs/dask_cluster/dask_operator/dask_connect.py &
-        pids[1]=$!
         python bin/predictions.py configs/automated_screens/intermetallics_HER.yml configs/dask_cluster/dask_operator/dask_connect.py &
-        pids[2]=$!
         python bin/predictions.py configs/automated_screens/intermetallics_CO2RR.yml configs/dask_cluster/dask_operator/dask_connect.py &
-        pids[3]=$!
-        for pid in ${pids[*]}; do
-            wait $pid
+        for job in `jobs -p` 
+        do
+            wait $job
         done
     - name: Shut down dask cluster
       if: always()
