--- a/configs/dask_cluster/dask_operator/catlas-hybrid-cluster.yml
+++ b/configs/dask_cluster/dask_operator/catlas-hybrid-cluster.yml
@@ -9,7 +9,7 @@ spec:
         containers:
           - image: ulissigroup/kubeflow:predictions
             imagePullPolicy: Always
-            args: [dask-worker, --nthreads, '2',--nprocs,'1', --no-dashboard, --memory-limit,'6 GiB',--death-timeout, '600',--name,'$(DASK_WORKER_NAME)',--preload,'catlas.dask_utils']
+            args: [dask-worker, --nthreads, '1',--nprocs,'1', --no-dashboard, --memory-limit,'6 GiB',--death-timeout, '600',--name,'$(DASK_WORKER_NAME)',--lifetime,'10 minutes',--lifetime-stagger,'1 minutes',--lifetime-restart,--preload,'catlas.dask_utils']
             name: dask-worker
             env: 
             - name: OMP_NUM_THREADS
@@ -121,7 +121,7 @@ spec:
       containers:
       - image: ulissigroup/kubeflow:predictions
         imagePullPolicy: Always
-        args: [dask-worker, --nthreads, '1',--nprocs,'1', --no-dashboard, --memory-limit,'16 GiB',--death-timeout, '600',--resources,"GPU=1",--name,'$(DASK_WORKER_NAME)',--preload,'catlas.dask_utils']
+        args: [dask-worker, --nthreads, '1',--nprocs,'1', --no-dashboard, --memory-limit,'16 GiB',--death-timeout, '600',--resources,"GPU=1",--name,'$(DASK_WORKER_NAME)',--lifetime,'10 minutes',--lifetime-stagger,'1 minutes',--lifetime-restart,--preload,'catlas.dask_utils']
         name: dask-worker
         env:
         - name: OMP_NUM_THREADS
