--- a/configs/automated_screens/intermetallics_CO2RR.yml
+++ b/configs/automated_screens/intermetallics_CO2RR.yml
@@ -5,8 +5,8 @@ input_options:
   adsorbate_file: 'catlas/adsorbate_structures/adsorbates.pkl'
 
 output_options:
-  pickle_final_output: True # True pickles the resulting predictions
-  pickle_intermediate_outputs: False
+  pickle_final_output: False # True pickles the resulting predictions
+  pickle_intermediate_outputs: True
   run_name: 'intermetallics_CO2RR_{{ GITHUB_RUN_ID }}'
   verbose: False
 
