fix tests to use github commit

--- a/.github/workflows/automated_screens.yml
+++ b/.github/workflows/automated_screens.yml
@@ -44,10 +44,12 @@ jobs:
       run: |
         sed -i "s/catlas-hybrid-cluster/catlas-hybrid-cluster-$GITHUB_RUN_ID/g" catlas/configs/dask_cluster/dask_operator/catlas-hybrid-cluster.yml
         sed -i "s/catlas-hybrid-cluster/catlas-hybrid-cluster-$GITHUB_RUN_ID/g" catlas/configs/dask_cluster/dask_operator/dask_connect.py
+        sed -i "s+subPath: catlas$+subPath: catlas_runners/$GITHUB_RUN_ID/catlas+g" configs/dask_cluster/dask_operator/catlas-hybrid-cluster.yml
+        sed -i "s+subPath: ocp$+subPath: catlas_runners/$GITHUB_RUN_ID/ocp+g" configs/dask_cluster/dask_operator/catlas-hybrid-cluster.yml
         kubectl apply -f catlas/configs/dask_cluster/dask_operator/catlas-hybrid-cluster.yml
         sleep 10
         kubectl scale --replicas=80 daskworkergroup catlas-hybrid-cluster-$GITHUB_RUN_ID-default-worker-group
-        kubectl scale --replicas=6 daskworkergroup catlas-hybrid-cluster-$GITHUB_RUN_ID-gpu-worker-group
+        kubectl scale --replicas=8 daskworkergroup catlas-hybrid-cluster-$GITHUB_RUN_ID-gpu-worker-group
     - name: Run screens
       shell: bash
       run: |
