--- a/.github/workflows/test_catlas.yml
+++ b/.github/workflows/test_catlas.yml
@@ -84,6 +84,7 @@ jobs:
       run: |
         sed -i "s/catlas-hybrid-cluster/catlas-hybrid-cluster-$GITHUB_RUN_ID/g" catlas/configs/dask_cluster/dask_operator/catlas-hybrid-cluster.yml
         sed -i "s/catlas-hybrid-cluster/catlas-hybrid-cluster-$GITHUB_RUN_ID/g" catlas/configs/dask_cluster/dask_operator/dask_connect.py
+        sed -i "s+workspace-inference+shared-scratch+g" catlas/configs/dask_cluster/dask_operator/catlas-hybrid-cluster.yml
         sed -i "s+subPath: catlas$+subPath: catlas_runners/$GITHUB_RUN_ID/catlas+g" catlas/configs/dask_cluster/dask_operator/catlas-hybrid-cluster.yml
         sed -i "s+subPath: ocp$+subPath: catlas_runners/$GITHUB_RUN_ID/ocp+g" catlas/configs/dask_cluster/dask_operator/catlas-hybrid-cluster.yml
         kubectl apply -f catlas/configs/dask_cluster/dask_operator/catlas-hybrid-cluster.yml
