--- a/configs/automated_screens/intermetallics_CO2RR.yml
+++ b/configs/automated_screens/intermetallics_CO2RR.yml
@@ -12,8 +12,15 @@ output_options:
 
 bulk_filters:
   filter_by_element_groups: ['transition metal']
-  filter_by_object_size: 40 # 60
-
+  filter_by_object_size: 40 #60
+  filter_by_pourbaix_stability: 
+    max_decomposition_energy: 0
+    lmdb_path: "catlas/pourbaix_diagrams/20220222_query.lmdb"
+    V_lower: -1.35
+    V_upper: -0.55
+    V_step: 0.05
+    pH_lower: 3
+    pH_upper: 3
 adsorbate_filters:
   filter_by_smiles: ['*H', '*CO','*OH','*CHO']
 
