cleaning up large files + bug

--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,7 @@ configs/dask_cluster/dev_kube_cluster/worker-gpu.yml
 outputs/
 ocp_checkpoints
 catlas/pourbaix_diagrams
-catlas/parity/npz-files
+catlas/parity/df_pkls
 
 # VSCode
 *.vscode*
