--- a/.github/workflows/test_catlas.yml
+++ b/.github/workflows/test_catlas.yml
@@ -22,7 +22,7 @@ jobs:
     - run: |
         (cd /home/jovyan/ocp && git pull) 
         ln -s /home/jovyan/shared-scratch/catlas/ocp_checkpoints
-        ln -s /home/jovyan/shared-scratch/catlas/npz-files ./catlas/parity/
+        ln -s /home/jovyan/shared-scratch/catlas/df_pkls ./catlas/parity/
         ln -s /home/jovyan/shared-scratch/catlas/pourbaix_diagrams ./catlas/
         python setup.py develop
         python bin/predictions.py configs/tests/test_metals.yml configs/dask_cluster/local_cluster/local_cluster.py
@@ -43,7 +43,7 @@ jobs:
       run: |
         (cd /home/jovyan/ocp && git pull) 
         ln -s /home/jovyan/shared-scratch/catlas/ocp_checkpoints
-        ln -s /home/jovyan/shared-scratch/catlas/npz-files ./catlas/parity/
+        ln -s /home/jovyan/shared-scratch/catlas/df_pkls ./catlas/parity/
         ln -s /home/jovyan/shared-scratch/catlas/pourbaix_diagrams ./catlas/
         python setup.py develop
         python bin/predictions.py configs/tests/test_cpu_relax.yml configs/dask_cluster/local_cluster/local_cluster.py
@@ -79,6 +79,8 @@ jobs:
       run: |
         cd catlas
         ln -s /home/jovyan/shared-scratch/catlas/ocp_checkpoints
+        ln -s /home/jovyan/shared-scratch/catlas/df_pkls ./catlas/parity/
+        ln -s /home/jovyan/shared-scratch/catlas/pourbaix_diagrams ./catlas/
         python setup.py develop
     - name: Startup dask cluster
       run: |
