--- a/configs/tests/test_metals.yml
+++ b/configs/tests/test_metals.yml
@@ -12,7 +12,13 @@ input_options:
   adsorbate_file: 'catlas/adsorbate_structures/adsorbates.pkl'
 
 bulk_filters:
-    filter_by_bulk_ids: ['mp-126','mp-30', 'mp-101']
+    filter_by_bulk_ids: ['mp-126','mp-30', 'mp-81', 'mp-13', 'mp-79']
+    filter_by_pourbaix_stability: 
+      max_decomposition_energy: 0.5
+      lmdb_path: "catlas/pourbaix_diagrams/20220222_query.lmdb"
+      conditions:
+        - pH: 7
+          V: -0.5
 
 adsorbate_filters:
     filter_by_smiles: ['*H']
